# napari-ctc-io

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_ctc_io/: __init__.py  _reader.py  _writer.py  napari.yaml  reader.py
src/napari_ctc_io/_tests/: test_reader.py  test_writer.py
src/napari_ctc_io/_tests/resources/TRA/: README.md
src/napari_ctc_io/_tests/resources/edge_cases/TRA/: 000.tif  002.tif  tracks.txt
src/napari_open_ctc/: __init__.py  _reader.py  _writer.py  napari.yaml  reader.py
src/napari_open_ctc/_tests/: test_reader.py
