[metadata]
name = napari-open-ctc

description = "Drag and drop annotations/results in the Cell Tracking Challenge (CTC) format into napari."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bentaculum/napari-open-ctc
author = Benjamin Gallusser
author_email = benjamin.gallusser@epfl.ch
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: napari
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/bentaculum/napari-open-ctc/issues
    Documentation = https://github.com/bentaculum/napari-open-ctc#README.md
    Source Code = https://github.com/bentaculum/napari-open-ctc
    User Support = https://github.com/bentaculum/napari-open-ctc/issues

[options]
packages = find:
install_requires =
    napari
    numpy
    scikit-image
    tifffile
    pandas

python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-open-ctc = napari_open_ctc:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
